--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -137,7 +137,7 @@
                                                             name="checkIn" id="{{myIndex}}"> {{item.setNo}}
                                                     </td>
 
-                                                    <td>
+                                                    <td style="width: 252px;">
 
                                                         <div class="qty-box" style="margin-top: 0px !important;">
                                                             <div class="input-group">
