--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -21,21 +21,23 @@
                             <!-- <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a> -->
                             &nbsp;
                         </li>
-                        <li class="mobile-wishlist" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
+                        <li class="mobile-wishlist"
+                            *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
                             <a (click)="Login()"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
                         </li>
-                        <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
+                        <li class="onhover-dropdown mobile-account"
+                            *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
                             <i class="fa fa-user" aria-hidden="true"></i> {{LoggedInUser[0].name}}
                             <ul class="onhover-show-div">
                                 <li>
                                     <a data-lng="en" [routerLink]="['/pages/dashboard']">
-                    My Account
-                  </a>
+                                        My Account
+                                    </a>
                                 </li>
                                 <li>
                                     <a data-lng="es" (click)="Logout()">
-                    Logout
-                  </a>
+                                        Logout
+                                    </a>
                                 </li>
                             </ul>
                         </li>
