--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -216,12 +216,19 @@
                                                     <div style="margin-right:230px; padding-right:20px">
 
                                                         <div class="a-row">
-                                                            <span class="a-color-success">
+                                                            <ul class="col-md-12 steps">
+                                                                <li class="{{lstPro.statusId==1?'active':''}}"><span>New Order</span></li>
+                                                                <li class="{{lstPro.statusId==2?'active':''}}"><span>Processing</span></li>
+                                                                <li class="{{lstPro.statusId==3?'active':''}}"><span>Dispatched</span></li>
+                                                                <li class="{{lstPro.statusId==4?'active':''}}"><span>Delivered</span></li>
+                                                                <li *ngIf="lstPro.statusId==5" class="{{lstPro.statusId==5?'active':''}}"><span>Returned</span></li>
+                                                            </ul>
+                                                            <!-- <span class="a-color-success">
                                                                 Not yet dispatched
                                                             </span>
 
                                                             <span data-isstatuswithwarning="0" data-yodeliveryestimate="Arriving Monday" data-yoshortstatuscode="" data-yostatusstring="Not yet dispatched" class="js-shipment-info aok-hidden">
-                                                            </span>
+                                                            </span> -->
                                                         </div>
                                                     </div>
 
