--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,59 @@
 /* You can add global styles to this file, and also import other style files */
+
+.steps {
+    background-color: #fff;
+    list-style-type: none;
+    margin: 0px 0px 15px;
+    padding: 10px 0px;
+    height: 55px;
+}
+
+.steps li {
+    float: left;
+    position: relative;
+    width: 25%;
+    text-align: center;
+}
+
+.steps li span {
+    width: 100px;
+    height: 35px;
+    /* border-radius: 100%; */
+    text-align: center;
+    line-height: 35px;
+    background: rgb(46, 160, 1);
+    color: black !important;
+    margin: 0 1em;
+    color: white;
+    position: relative;
+    display: inline-block;
+    z-index: 5;
+}
+
+.steps li::before {
+    content: '';
+    position: absolute;
+    top: 1.1em;
+    left: -50%;
+    width: 100%;
+    height: 4px;
+    background: rgb(46, 160, 1);
+    z-index: 2;
+}
+
+.steps li:first-child::before {
+    display: none;
+}
+
+.steps .active span {
+    background: rgb(46, 160, 1);
+    color: white !important;
+}
+
+.steps .active~li span {
+    background: #cccccc;
+}
+
+.steps .active~li::before {
+    background: #cccccc;
+}
