--- a/src/assets/scss/theme/_variables.scss
+++ b/src/assets/scss/theme/_variables.scss
@@ -35,7 +35,7 @@ $top-header: #f8f8f8;
 $header-font: #999999;
 $shadow: #ededed;
 $box-border: rgba(236, 236, 236, 0.6588235294117647);
-$grey-about: #f7f7f7;
+$grey-about: #b9d8fa;
 $grey2:#555555;
 $grey3: #efefef;
 $grey4: #444444;
@@ -64,7 +64,7 @@ $olive: #808000;
 $navy: #505c80;
 $maroon: #804f56;
 $icon: #6f6f6f;
-$grey-about: #f7f7f7;
+$grey-about: #b9d8fa;
 $grey01:#111111;
 $grey2:#555555;
 $grey3: #efefef;
