--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <ngx-loading-bar></ngx-loading-bar>
-<router-outlet></router-outlet>
-<app-tap-to-top></app-tap-to-top>
-<!-- <app-layout-box></app-layout-box> -->
+<ngx-spinner [fullScreen]="true" type="ball-scale" size="large">
+    <p class="loading"></p>
+</ngx-spinner>
+    <router-outlet></router-outlet>
+    <app-tap-to-top></app-tap-to-top>
+    <!-- <app-layout-box></app-layout-box> -->
