--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ngx-loading-bar></ngx-loading-bar>
 <ngx-spinner [fullScreen]="true" type="ball-scale" size="large">
-    <p class="loading"></p>
+    <p style="color: white" > Loading... </p>
 </ngx-spinner>
     <router-outlet></router-outlet>
     <app-tap-to-top></app-tap-to-top>
