--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -213,7 +213,7 @@
                                         <div class="a-box shipment" *ngFor="let lstPro of OrderTrackingListByOrderId(lst.orderId)">
                                             <div class="a-box-inner">
                                                 <div class="a-row shipment-top-row js-shipment-info-container">
-                                                    <div style="margin-right:230px; padding-right:20px">
+                                                    <div>
 
                                                         <div class="a-row">
                                                             <ul class="col-md-12 steps">
