--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -27,7 +27,7 @@
                     <i class="fa fa-check-circle" aria-hidden="true"></i>
                     <h2>thank you</h2>
                     <p>Payment has been received and Order Placed Successfully</p>
-                    <p>Transaction ID:{{ orderDetails[0].orderNumber }}</p>
+                    <p>Order ID:{{ orderDetails[0].orderNumber }}</p>
                 </div>
             </div>
         </div>
