forget-password.component.html, reset-password.component.html

--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -15,6 +15,11 @@
                             <label for="review">Password <span style="color: red;">*</span></label>
                             <input type="password" class="form-control" id="review" formControlName="password" placeholder="Enter your password" required>
                         </div>
+                        <div class="form-group">
+                            <a data-lng="en" href='/pages/forget/password'>
+                                Forget Password
+                            </a>
+                        </div>
                         <button class="btn btn-solid" (click)="Login()">Login</button>
                         <button class="btn btn-solid" style="float:right;" (click)="close()">Close</button>
                     </form>
