--- a/src/app/pages/account/forget-password/forget-password.component.html
+++ b/src/app/pages/account/forget-password/forget-password.component.html
@@ -5,12 +5,12 @@
         <div class="row">
             <div class="col-lg-6 offset-lg-3">
                 <h2>Forget Your Password</h2>
-                <form class="theme-form">
+                <form class="theme-form" [formGroup]="ResetPasswordForm">
                     <div class="form-row">
                         <div class="col-md-12">
-                            <input type="text" class="form-control" id="email" placeholder="Enter Your Email" required="">
+                            <input type="text" class="form-control" id="email" formControlName="email" placeholder="Enter Your Email" required>
                         </div>
-                        <button class="btn btn-solid">Submit</button>
+                        <button class="btn btn-solid" (click)="ResetPassword()">Submit</button>
                     </div>
                 </form>
             </div>
