--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -53,7 +53,7 @@
                     <div class="col-sm-4">
                         <h4>shipping address</h4>
                         <ul class="order-detail">
-                            <li>{{ orderDetails[0].address }}</li>
+                            <li>{{ orderDetails[0].address }}, {{orderDetails[0].city}}</li>
                             <li>{{ orderDetails[0].state }}</li>
                             <li>{{ orderDetails[0].country }}, {{ orderDetails[0].zipCode }}</li>
                             <li>Contact No. {{ orderDetails[0].phone }}</li>
