--- a/src/app/pages/account/forget-password/forget-password.component.html
+++ b/src/app/pages/account/forget-password/forget-password.component.html
@@ -1,10 +1,10 @@
-<app-breadcrumb [title]="'Forget Password'" [breadcrumb]="'Forget Password'"></app-breadcrumb>
+<app-breadcrumb [title]="'Forgot Password'" [breadcrumb]="'Forgot Password'"></app-breadcrumb>
 <!-- section start -->
 <section class="pwd-page">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 offset-lg-3">
-                <h2>Forget Your Password</h2>
+                <h4>Forgot Your Password</h4>
                 <form class="theme-form" [formGroup]="ResetPasswordForm">
                     <div class="form-row">
                         <div class="col-md-12">
