--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="form-group">
                             <a data-lng="en" href='/pages/forget/password'>
-                                Forget Password
+                                Forgot Password?
                             </a>
                         </div>
                         <button class="btn btn-solid" (click)="Login()">Login</button>
