--- a/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
@@ -78,7 +78,7 @@
                             </div>
 
                             <div class="col-lg-6 rtl-text">
-                                <div class="product-right"> 
+                                <div class="product-right">
                                     <h2>{{ productkart[0]?.productName }}</h2>
                                     <h4>
                                         <del
@@ -100,7 +100,7 @@
                                     <div class="product-description border-product">
                                         <h6
                                             style="color: #222222;text-transform: capitalize;font-weight: 400;margin-bottom: 0;font-size: 18px;">
-                                            select size
+                                          
                                             <span>
                                                 <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size
                                                     chart</a>
@@ -139,7 +139,7 @@
                                                                         class="btn quantity-left-minus"
                                                                         data-type="minus"
                                                                         (click)="decrement(myIndex,item)">
-                                                                        <i class="ti-angle-left"></i>
+                                                                        <i class="ti-minus"></i>
                                                                     </button>
                                                                 </span>
                                                                 <input type="text" name="quantity"
@@ -151,7 +151,7 @@
                                                                     <button type="button"
                                                                         class="btn quantity-right-plus" data-type="plus"
                                                                         (click)="increment(myIndex,item,item.qty)">
-                                                                        <i class="ti-angle-right"></i>
+                                                                        <i class="ti-plus"></i>
                                                                     </button>
                                                                 </span>
                                                             </div>
