--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -23,7 +23,8 @@
                         </li>
                         <li class="mobile-wishlist"
                             *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
-                            <a (click)="Login()"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
+                            <span class="Logininfo"><a (click)="Login()"><i class="fa fa-user"
+                                        aria-hidden="true"></i>Login</a></span>
                         </li>
                         <li class="onhover-dropdown mobile-account"
                             *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
