--- a/src/assets/scss/theme/_style.scss
+++ b/src/assets/scss/theme/_style.scss
@@ -14208,3 +14208,15 @@ div#loading-bar {
         transform: scale(1)
     }
 }
+
+.Logininfo  {
+    color: #2874f0;
+    font-weight: 500;
+    /* background-color: #fff; */
+    cursor: pointer;
+    border-radius: 2px;
+    height: 47px;
+    padding: 5px 40px;
+    /* border: 1px solid #dbdbdb; */
+    font-size: 18px;
+} 
