--- a/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
@@ -135,7 +135,7 @@
                                                                         class="btn quantity-left-minus"
                                                                         data-type="minus"
                                                                         (click)="decrement(myIndex,item)">
-                                                                        <i class="ti-angle-left"></i>
+                                                                        <i class="ti-minus"></i>
                                                                     </button>
                                                                 </span>
                                                                 <input type="text" name="quantity"
@@ -147,7 +147,7 @@
                                                                     <button type="button"
                                                                         class="btn quantity-right-plus" data-type="plus"
                                                                         (click)="increment(myIndex,item,item.qty)">
-                                                                        <i class="ti-angle-right"></i>
+                                                                        <i class="ti-plus"></i>
                                                                     </button>
                                                                 </span>
                                                             </div>
