--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -55,7 +55,7 @@
                         <app-left-menu></app-left-menu>
                         <div class="brand-logo">
                             <a routerLink="/home/fashion" id="headerlogo">
-                                <img [src]="themeLogo" class="img-fluid" alt="logo">
+                                <img [src]="themeLogo" class="img-fluid" style="max-width: 60%!important;" alt="logo">
                             </a>
                         </div>
                     </div>
